# python-project-52

./: .env  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requierments.txt  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: label_create.html  label_delete.html  label_list.html  label_update.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: status_create.html  status_delete.html  status_list.html  status_update.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0003_alter_task_author_alter_task_worker.py  0004_auto_20250314_1453.py  0005_remove_task_point_task_label.py  0006_alter_task_worker.py  0007_rename_worker_task_executor_alter_task_label.py  0008_rename_label_task_labels.py
task_manager/tasks/templates/: task_create.html  task_delete.html  task_details.html  task_list.html  task_update.html
task_manager/templates/: index.html  layout.html  login.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_remove_user_updated_at.py  0003_delete_user.py
task_manager/users/templates/users/: create_user.html  delete_user.html  login.html  update_user.html  (+1 more)
